# data-pipeline

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  config-devel.yaml  config.yaml  docker-compose.yml  pr_check.sh  pyproject.toml  renovate.json  requirements.txt
.github/: pull_request_template.md
.github/workflows/: automerge-rules-releases.yml  bdd.yml  bots-automerge.yml  lint.yml  pre-commit-autoupdate.yml
.tekton/: data-pipeline-pull-request.yaml  data-pipeline-pull-request.yaml-e  data-pipeline-push.yaml  data-pipeline-push.yaml-e
dashboards/: grafana-dashboard-insights-ccx-cronjobs.yaml  grafana-dashboard-insights-ccx-data-pipeline.configmap.yaml  grafana-dashboard-insights-ccx-processing-slo.configmap.yaml  grafana-dashboard-insights-commit-distance.yaml
deploy/: clowdapp.yaml  dvo-extractor.yaml  rules-processing.yml  test.yaml
